ics-demo-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ics-demo-app
  name: ics-demo-app
spec:
  type: ClusterIP
  selector:
    app: ics-demo-app
  ports:
    - name: app-port
      protocol: TCP
      port: 8080
      targetPort: 8080
status:
  loadBalancer: {}
